Website reponsive. Next up: Cleaning up code

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   -->
   <main>
     <div class="product-container">
-      <img src="./images/image-product-mobile.jpg" alt="Bottle of Gabrielle Chanel perfume" width="100%" height="40%">
+      <img class="product-image" src="./images/image-product-mobile.jpg" alt="Bottle of Gabrielle Chanel perfume" width="100%" height="40%">
       <div class="product-desc">
         <h3>Perfume</h3>
         <h1>Gabrielle Essence Eau De Parfum</h1>
